# quantum_simulation_project

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .ruff.toml  Makefile  README.md  conda_solver_configurator.sh  environment.yml  error_mitigation.py  molecular_hamiltonian.py  pyproject.toml  pytest.ini  quantum_solver.py  requirements.txt  setup.cfg
.github/workflows/: osv-scanner.yml  python-app.yml  python-package.yml
docs/: russell_principles.md
docs/theoretical_framework/: enhanced_framework.md
frontend/: .eslintrc.json  package-lock.json  package.json
frontend/src/: App.tsx
src/: __init__.py  advanced_quantum_simulation.py  blender_quantum_viz.py  luxcore_extension.py  quantum_gpu_accelerator.py  quantum_gui.py  quantum_shaders.py  quantum_simulation.py  quantum_state_buffer.py  run_quantum_simulation.py  scientific_paper_generator.py  test_quantum_environment.py  test_quantum_gui.py  test_quantum_gui_headless.py  verify_quantum_gui.py
src/quantum_drug_discovery/: __init__.py  error_mitigation.py  hybrid_solver.py  molecular_hamiltonian.py  quantum_solver.py
tests/: test_quantum_simulation.py  test_quantum_visualization.py  test_russell_principles.py
venv_311/: pyvenv.cfg
