[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum_drug_discovery"
version = "0.1.0"
description = "Quantum drug discovery framework with enhanced error mitigation"
authors = [
    {name = "Devin AI"}
]
dependencies = [
    "qiskit>=1.0.0",
    "qiskit-aer>=0.16.0",
    "numpy>=1.16.3",
    "scipy>=1.0",
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v"
